--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>making african a tech continent 
+    <h1>making african a tech continent, i'm in for this
     </h1>
 </body>
 </html>
